--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -15,15 +15,52 @@
 .brounded-sm
   border-radius: 8px !important
 
+.curso-container .btn-iniciar .iniciar-btn-container .iniciar-btn-text
+  color: #0B0A0A !important
+
+.iniciar-btn-container .icon
+  background-color: #083E61 !important 
+
+.img-a 
+  display: block
+  margin: auto
+
+.img-t
+  width: auto !important
+  height: auto !important 
+
+.j1
+  display: grid
+  align-items: center 
+
+.fa-ul
+  margin-left: 0 !important
+  li
+    display: flex !important
+    &:before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem   
+
+.br
+  &-1
+    border-radius: 10px !important      
+
 .bg-color
   &-1
-    background-color: #EAF8FD
+    background-color: #FBF4C9
   &-2
-    background-color: #FFFBE8
+    background-color: #EBE9F0
   &-3
-    background-color: #F0E9F6
+    background-color: #DCE8FA
   &-4
-    background-color: #EAF8FD
+    background-color: #C3F3FB
+  &-5
+    background-color: #DCE8FA
+  &-6
+    background-color: #F3DE50 
+  &-7
+    background-color: #D9D5E3     
   &-info
     background-color: #E8EEFD
   &-sintesis
@@ -41,20 +78,30 @@
 
 // Full Width Background
 .bg-full-width
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: bottom
-  margin-inline: -3.3rem
-  @media screen and (max-width: $bp-max-sm)
-    padding-left: 1.5rem
-    padding-right: 1.5rem
+  &-1    
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: bottom
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem 
+
+  &-2
+    background-size: 100% 77%
+    background-repeat: no-repeat
+    background-position: center top
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem       
 
 .bg-fondo
   &-1
-    background-image: url("../assets/bg/bg1.png") !important
+    background-image: url("../assets/bg/1.png") !important
     background-position: top
   &-2
-    // background-image: url("../assets/bg/bg2.png") !important
+    background-image: url("../assets/bg/2.png") !important
     background-position: bottom
   &-slider
     background-image: url("../assets/bg/bg-slider.png") !important
@@ -210,3 +257,22 @@ $custom-card-img-height: 322px
   a
     text-decoration: none
     color: $color-sistema-texto
+
+.acordion__header
+  background-color: #EBE9F0 !important
+
+.acordion__header--active
+  background-color: $color-acento-contenido !important
+  h4, i
+    color: white !important
+
+.acordion__contenido
+  background-color: #EBE9F0 !important  
+
+.slyder-a__tipo-b
+  background-color: #2F4F7E !important    
+.slyder-a__bullets__item
+  background-color: #5692E8 !important
+  border-color: #5692E8 !important
+.slyder-a__bullets__item--active
+  background-color: #A1AFC5 !important  
